--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "hbs": "^4.1.1",
     "morgan": "^1.10.0",
     "uuid": "^8.3.1"
   }
