--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "booklabel",
+  "name": "simpleServerTemplate",
   "version": "1.0.0",
-  "description": "Book delivery service",
+  "description": "Simple nodejs server template",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Henrique Santos Azevedo",
   "license": "ISC",
   "dependencies": {
@@ -13,7 +10,6 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "morgan": "^1.10.0",
-    "uuid": "^8.3.1"
+    "morgan": "^1.10.0"
   }
 }
